Fix scene hierarchy overflow

--- a/src/client/ui/panels/HierarchyPanelContainer.scss
+++ b/src/client/ui/panels/HierarchyPanelContainer.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   color: $text2;
+  overflow: auto;
 }
 
 :local(.breadCrumbBar) {
